# Milvus

./: .gitignore  README.md  pyproject.toml  test.ipynb
applications/: cluster_mode_milvus_runner.sh  config.py  milvus_data_base_provider.py
