[tool.poetry]
package-mode = false
name = "Milvus"
version = "0.0.0"
authors = [
    "Abolfazl Shirmahalei <abolfazl.shirmahalei@gmail.com>"
]

[tool.poetry.dependencies]
python = "3.9.13"
pymilvus = "2.3.8"
numpy = "2.0.2"
jupyterlab = "4.2.5"
docker = "7.1.0"

[build-system]
requires = ["poetry-core", "setuptools==70.0.0"]
build-backend = "poetry.core.masonry.api"
